--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,64 @@ p {
   background-color: var(--primary-color);
   padding: 1rem;
 }
+
+
+/* Navbar */
+
+
+#main-nav {
+  background-color: #ffff;
+  position: sticky;
+  top: 0;
+  z-index: 3;
+}
+
+
+#main-nav .container {
+  display: grid;
+  grid-template-columns: 0.6fr 3fr 2fr;
+  padding: 1rem;
+  align-items: center;
+}
+
+
+#main-nav .logo {
+  width: 65px;
+}
+
+#main-nav ul {
+  display: flex;
+  justify-self: center;
+}
+
+#main-nav ul li a {
+  padding: 0.8rem;
+  font-weight: bold;
+}
+
+#main-nav ul li a.active {
+  background-color: var(--primary-color);
+  color: #ffff;
+  border-radius: 5px;
+}
+
+#main-nav ul li a:hover {
+  background-color: var(--light-color);
+  color: var(--dark-color);
+}
+
+#main-nav .social-icons  {
+  justify-self: end;
+}
+
+
+#main-nav .social-icons a i {
+  padding: 0.8rem;
+}
+
+
+
+#main-nav .social-icons i:hover {
+  opacity: 0.8;
+}
+
