--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ p {
 }
 
 .bg-primary {background-color: var(--primary-color); color: #ffff;}
+.bg-secondary {background-color: var(--secondary-color); color: #ffff;}
 .bg-light {background-color: var(--light-color); color: var(--dark-color);}
 .bg-dark {background-color: var(--dark-color); color: #ffff;}
 
@@ -124,14 +125,30 @@ p {
 /* General Margin Settings */
 
 
-.m-1{padding: 0.5rem;}
-.m-2{padding: 0.6rem;}
-.m-3{padding: 0.8rem;}
-.m-4{padding: 1rem;}
+.m-1{margin: 0.5rem;}
+.m-2{margin: 0.6rem;}
+.m-3{margin: 0.8rem;}
+.m-4{margin: 1rem;}
+
+
+.mb-1{margin-bottom: 0.5rem;}
+.mb-2{margin-bottom: 0.6rem;}
+.mb-3{margin-bottom: 0.8rem;}
+.mb-4{margin-bottom: 1rem;}
 
 .card-primary {
   background-color: var(--primary-color);
   padding: 1rem;
+}
+
+.category {
+  display: inline-block;
+  color: #ffff;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  padding: .4rem .6rem;
+  border-radius: 15px;
+  margin-bottom: .5rem;
 }
 
 
@@ -156,6 +173,10 @@ p {
 
 #main-nav .logo {
   width: 65px;
+}
+
+#main-nav .logo:hover {
+  cursor: pointer;
 }
 
 #main-nav ul {
@@ -193,4 +214,48 @@ p {
 #main-nav .social-icons i:hover {
   opacity: 0.8;
 }
+
+
+/* header */
+
+
+#header {
+  color: #ffff;
+  background:#333;
+  padding: 2rem;
+  position: relative;
+}
+
+/* bir header oluşturdu ve position ı relative verdi sonrasında bu header öncesinde bir nesne
+oluşturduk ve resmi burada konumlandırdık ve absolute position ekledik ve konumlandırma yaptık */
+
+#header::before {
+  content: '';
+  background: url('../img/rowing.jpeg') no-repeat center center/cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+}
+
+
+#header .header-container {
+  display: grid;
+  grid-template-columns: repeat(2 , 1fr);
+  height: 50vh;
+  align-items: center;
+  justify-content: center;  
+}
+
+#header .header-content  {
+  z-index: 2;
+}
+
+
+#header .header-content p {
+  margin-bottom: 1rem;
+}
+
 
