--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,12 @@ p {
 .mb-3{margin-bottom: 0.8rem;}
 .mb-4{margin-bottom: 1rem;}
 
+
+.card {
+  background-color: #ffff;
+  padding: 1rem;
+}
+
 .card-primary {
   background-color: var(--primary-color);
   padding: 1rem;
@@ -258,4 +264,14 @@ oluşturduk ve resmi burada konumlandırdık ve absolute position ekledik ve kon
   margin-bottom: 1rem;
 }
 
+
+
+/* articles */
+
+
+#main-articles .article-containers { 
+  display: grid;
+  grid-template-columns: repeat(3 , 1fr);
+  gap: 1rem;
+}
 
