--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 
@@ -112,7 +113,7 @@ p {
 /* Y-AXIS */
 
 .py-1{padding-top: 0.5rem; padding-bottom: 0.5rem;}
-.py-2{padding-top: 0.6rem; padding-bottom: 0.6rem;}
+.py-2{padding-top: 1.5rem; padding-bottom: 1.5rem;}
 
 
 /* X-AXIS */
@@ -274,4 +275,62 @@ oluşturduk ve resmi burada konumlandırdık ve absolute position ekledik ve kon
   grid-template-columns: repeat(3 , 1fr);
   gap: 1rem;
 }
+
+
+
+/* footer */
+
+
+#main-footer {
+  background-color: var(--dark-color);
+  color: #ffff;
+}
+
+#main-footer img  {
+  width: 150px;
+}
+
+
+#main-footer a {
+  color: #ffff;
+}
+
+
+#main-footer .footer-container {
+  display: grid;
+  grid-template-columns: repeat(4 , 1fr);
+  gap: 1.3rem;
+}
+
+#main-footer .footer-container > *:last-child {
+  background-color: #444;
+  grid-column:  1 / span 4;
+  padding: .5rem;
+  text-align: center;
+}
+
+
+#main-footer .footer-container input[type="email"] {
+  width: 90%;
+  padding: .5rem;
+  margin-bottom: .5rem;
+}
+
+
+#main-footer .footer-container input[type="submit"] {
+  width: 90%;
+}
+
+#main-footer .footer-container ul li {
+  pad: .5rem 0;
+  border-bottom: 1px solid #555;
+  width: 90%;
+}
+
+
+#main-footer .footer-container ul li a:hover {
+  color: var(--primary-color);
+}
+
+
 
