Add : article.html is done

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ p {
 }
 
 .bg-primary {background-color: var(--primary-color); color: #ffff;}
-.bg-secondary {background-color: var(--secondary-color); color: #ffff;}
+.bg-secondary {background-color: var(--secondary-color) !important; color: #ffff;}
 .bg-light {background-color: var(--light-color); color: var(--dark-color);}
 .bg-dark {background-color: var(--dark-color); color: #ffff;}
 
@@ -220,6 +220,7 @@ p {
 
 #main-nav .social-icons i:hover {
   opacity: 0.8;
+  transition: 0.5s;
 }
 
 
@@ -316,6 +317,13 @@ oluşturduk ve resmi burada konumlandırdık ve absolute position ekledik ve kon
   margin-bottom: .5rem;
 }
 
+#main-footer .footer-container input[type="email"]:focus {
+  border: 0px solid;
+  outline: none;
+  background-color: var(--light-color);
+  color: var(--primary-color); 
+}
+
 
 #main-footer .footer-container input[type="submit"] {
   width: 90%;
@@ -333,4 +341,40 @@ oluşturduk ve resmi burada konumlandırdık ve absolute position ekledik ve kon
 }
 
 
+#main-footer .footer-container a i {
+  margin-right: .8rem;
+}
+
+#main-footer .footer-container a i:hover {
+  transition: 0.5s;
+  opacity: 0.8;
+}
+
+/* article details */
+
+.page-container {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+  margin: 2.5rem 0;
+  gap: 1.5rem;
+}
+
+.page-container > *:first-child {
+  grid-row: 1 / span 3;
+}
+
+
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #eee;
+}
+
+.page-container #categories ul li {
+  padding: .5rem 0;
+  border-bottom: 1px solid #555;
+  width: 90%;
+}
 
